[package]
name = "brother-ql-rs"
version = "0.1.1"
edition = "2018"
authors = ["Ryan Petschek <petschekr@gmail.com>"]
description = "Print to QL-series thermal label printers from Brother"
readme = "README.md"
license = "MIT"
repository = "https://github.com/petschekr/brother-ql-rs"

[dependencies]
rusttype = "0.7.5"
image = "0.21.0"
libusb = "0.3"

[replace]
"libusb-sys:0.2.3"= { git = "https://github.com/cmsd2/libusb-sys/" }
