[package]
name = "brother-ql-rs"
version = "0.2.1"
edition = "2018"
authors = ["Ryan Petschek <petschekr@gmail.com>"]
description = "Print to QL-series thermal label printers from Brother"
readme = "README.md"
license = "MIT"
repository = "https://github.com/petschekr/brother-ql-rs"

[dependencies]
rusttype = "0.8.2"
image = "0.22.4"
rusb = "0.5"
error-chain = "0.12.1"

#[replace]
#"libusb-sys:0.2.3"= { git = "https://github.com/cmsd2/libusb-sys/" }
